[package]
name = "agora-rs-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0"
futures = "0.3.21"
async-std = "1.12.0"
confy = { git = "https://github.com/rust-cli/confy" }
structopt = { version = "0.3.26", default-features = false }
anyhow = "1.0.60"
rand = "0.8.5"
blocking = "^1.2"
async-tungstenite = { version = "0.17.2", features = ["async-std-runtime", "async-native-tls"] }
gst = { package = "gstreamer", version = "0.18.8", features = ["v1_14"] }
gst-app = { package = "gstreamer-app", version = "0.18.7"} 
gst-webrtc = { package = "gstreamer-webrtc", version = "0.18.7" }
gst-sdp = { package = "gstreamer-sdp", version = "0.18.0", features = ["v1_14"] }
log = "0.4"
env_logger = "0.9.0"
agora-rtsa-rs = { path = "agora-rtsa-rs" }
serde = "1.0.143"
serde_derive = "1.0.143"
serde_json = "1.0.83"
